--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* .btn {
+.btn {
   font-size: 20px;
   color: rgb(0, 191, 255);
   border-radius: 35px;
@@ -12,4 +12,4 @@
   background-color: rgb(0, 191, 255);
   color: white;
   cursor: pointer;
-} */
+}
